fix: substitui Locale.of por new Locale para compatibilidade java 17 e atualiza versoes do testing-library para react 19